--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,14 @@
 
 .btn{
     padding: 10px 40px;
+    max-width: 100px;
+    display: inline-block;
+    margin: 0 auto;
+}
+
+.btn.btn-primary{
+    background-color: mediumslateblue;
+    color: #fff;
 }
 
 
@@ -98,3 +106,53 @@ nav .btn-sm{
     color: #fff;
 }
 /* fine hero debug */
+
+
+/* section row debug */
+.row{
+   display: flex;
+   align-items: start;
+   justify-content: center;
+   padding: 10% 0px;
+}
+
+.row.row-reverse{
+    flex-direction: row-reverse;
+}
+
+.col{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding: 20px;
+    width:100%;
+}
+
+.col-lg{
+    width: 70%;
+}
+
+.col-sm{
+    width: 30%;
+}
+
+.bkg-grey{
+    background-color: #ededed;
+}
+
+.row .col img{
+    width: 100%;
+    height: 400px;
+    background-color: aqua;
+}
+
+
+.row.direction-column{
+    flex-direction: column;
+}
+
+.w-80.text-center{
+    text-align: center;
+}
+
+/* Fine section row debug */
